# ros_class_week2_experiments2

./: .gitignore  README.md
src/djf_robot_description/: CMakeLists.txt  package.xml
src/djf_robot_description/launch/: display.launch  gazebo.launch
src/djf_robot_description/urdf/: simple_robot.urdf  simple_robot.xacro
src/my_class_pkg/: CMakeLists.txt  package.xml
src/my_class_pkg/cfg/: Tutorials.cfg
src/my_class_pkg/launch/: apriltag_grab.launch  parameter.launch  voice_grab.launch  voice_nav.launch
src/my_class_pkg/scripts/: apriltag_follow.py  apriltag_grab.py  color_line_follow.py  llm_chat.py  ros_log.py  ros_param.py  start_voice_qa.sh  stop_voice_qa.sh  tokenizer.py  voice_control.py  voice_nav.py
src/my_class_pkg/src/: dynamic_reconfigure.cpp  ros_bump.cpp  ros_bump_avoid.cpp  ros_dynamic_speed.cpp  ros_imu.cpp  ros_imu_spin.cpp  ros_log.cpp  ros_param.cpp  ros_sonic.cpp  ros_tof_avoid.cpp
src/zx_description/: .gitignore  CMakeLists.txt  package.xml
src/zx_description/gazebo_models/walking_description/: model.config  model.sdf
src/zx_description/gazebo_models/walking_with_camera_description/: model.config  model.sdf
src/zx_description/launch/: w2a.launch
src/zx_description/urdf/W2A/: w2a.xacro
